# fraud-detector-mlops

./: Dockerfile  README.md  justfile  pyproject.toml
src/fraud_detector_mlops/: __init__.py  __main__.py
tests/: test_scripts.py
